--- a/05-WebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-WebDesign/01-just쇼핑몰/css/comm.css
@@ -11,13 +11,13 @@
 .wrap {
   width: 1200px;
   margin: 0 auto;
-  background: #f3b2b2;
+  background: #ebe3e3;
 }
 .header {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  background: #c6ec93;
+  background: #ffffff;
 }
 .logo {
   display: flex;
@@ -31,13 +31,66 @@
 .gnb .depth1 {
   display: flex;
 }
-.gnb .depth1 a {
+.gnb .depth1:hover .depth2 {
+  display: block;
+}
+.gnb .depth1 > li > a {
   display: block;
   height: 100px;
   padding: 0 50px;
   line-height: 100px;
   text-align: center;
 }
+.gnb .depth1 > li > a:hover {
+  /* background: #ebaa60; */
+  border-bottom: 3px solid #ff0000;
+  /* color: #ffffff; */
+}
 .gnb .depth2 {
-  /* display: none; */
+  display: none;
+  padding: 20px 0;
+  background: rgb(255, 255, 255);
+}
+.gnb .depth2 a {
+  display: block;
+  height: 40px;
+  /* 패딩값 넣거나 l-h값(h값과 같은 값)넣기 */
+  /* padding: 7px 0; */
+  text-align: center;
+  line-height: 40px;
+}
+.gnb .depth2 a:hover {
+  border-bottom: 2px solid #ff0000;
+}
+
+/* slide */
+.slide {
+  overflow: hidden;
+  height: 300px;
+}
+.slide a, .slide img {
+  display: block;
+}
+
+/* contents */
+.contents {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+.gallery .cont > ul {
+  display: flex;
+  justify-content: space-between;
+}
+.tabs {
+  width: 340px;
+}
+.bnr {
+  width: 402px;
+}
+.bnr a, .bnr img {
+  display: block;
+}
+.goto {
+  width: 340px;
 }
