--- a/05-WebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-WebDesign/01-just쇼핑몰/css/comm.css
@@ -78,10 +78,10 @@
   justify-content: space-between;
   padding: 10px 0;
 }
-.gallery .cont > ul {
+/* .gallery .cont > ul {
   display: flex;
   justify-content: space-between;
-}
+} */
 .tabs {
   width: 340px;
 }
