--- a/05-WebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-WebDesign/01-just쇼핑몰/css/comm.css
@@ -207,3 +207,44 @@
   height: 100px;
 }
  
+/* modal */
+.modal-dimmed {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+  background: rgb(0, 0, 0, 0.5);
+}
+.modal-box {
+  position: relative;
+  padding: 50px;
+  width: 500px;
+  height: 500px;
+  border: 1px solid #8f5600;
+  background: rgb(219, 180, 135, 0.95);
+  border-radius: 10px;
+  text-align: center;
+  font-size: 20px;
+}
+.modal-box h3 {
+  margin-bottom: 30px;
+  font-size: 25px;
+}
+.modal-box button {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 50px;
+  height: 50px;
+  background: #000000;
+  border-radius: 50%;
+  border: none;
+  color: #ffffff;
+  font-size: 30px;
+  cursor: pointer;
+}
