--- a/05-WebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-WebDesign/01-just쇼핑몰/css/comm.css
@@ -29,6 +29,12 @@
 .gnb .depth1 {
   display: flex;
 }
+.gnb .depth1 >li {
+  position: relative;
+}
+.gnb .depth1 > li:last-child .depth2 {
+  border-right: 1px solid #ebebeb;
+}
 .gnb .depth1:hover .depth2 {
   display: block;
 }
@@ -41,13 +47,21 @@
 }
 .gnb .depth1 > li > a:hover {
   /* background: #ebaa60; */
-  border-bottom: 3px solid #ff0000;
+  border-bottom: 3px solid #1a1a1a;
   /* color: #ffffff; */
 }
+
 .gnb .depth2 {
-  display: none;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  /* display: none; */
   padding: 20px 0;
   background: rgb(255, 255, 255);
+  border: 1px solid #ebebeb;
+  border-right: none;  
 }
 .gnb .depth2 a {
   display: block;
@@ -58,16 +72,22 @@
   line-height: 40px;
 }
 .gnb .depth2 a:hover {
-  border-bottom: 2px solid #ff0000;
+  border-bottom: 2px solid #1a1a1a;
 }
 
 /* slide */
-.slide {
+.slide-wrap a, .slide-wrap img {
+  display: block;
+}
+.slide-wrap {
+  position: relative;
   overflow: hidden;
   height: 300px;
 }
-.slide a, .slide img {
-  display: block;
+.lst-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* contents */
