--- a/05-WebDesign/01-just쇼핑몰/css/comm.css
+++ b/05-WebDesign/01-just쇼핑몰/css/comm.css
@@ -35,9 +35,6 @@
 .gnb .depth1 > li:last-child .depth2 {
   border-right: 1px solid #ebebeb;
 }
-.gnb .depth1:hover .depth2 {
-  display: block;
-}
 .gnb .depth1 > li > a {
   display: block;
   height: 100px;
@@ -45,23 +42,51 @@
   line-height: 100px;
   text-align: center;
 }
-.gnb .depth1 > li > a:hover {
+/* li에 오버해야 depth1에 선 고정됨 */
+.gnb .depth1 > li:hover > a {
   /* background: #ebaa60; */
   border-bottom: 3px solid #1a1a1a;
   /* color: #ffffff; */
 }
-
+/* gnb 마우스 오버 후 */
+.gnb .depth1:hover .depth2 {
+  display: block;
+  /* 메뉴 하나 더 많을때 max-h/px값(최대값)으로 넣어야 보임 */
+  max-height: 300px;
+  /* padding: 10px 0; */
+  /* 선 색상은 오버 전에 설정되어 있으니 px값만 작성*/
+  border-bottom-width: 1px;
+}
+/* gnb 마우스 오버 전(transition상태 바뀌기 전에 넣기) */
 .gnb .depth2 {
   position: absolute;
   top: 100px;
   left: 0;
   right: 0;
   z-index: 1000;
+  /* 오버 전 글씨 안보이게 */
+  overflow: hidden;
+  max-height: 0;
   /* display: none; */
-  padding: 20px 0;
+  /* padding: 0; */
   background: rgb(255, 255, 255);
-  border: 1px solid #ebebeb;
-  border-right: none;  
+  /* 오버 전에 선 필요 없어서 0 */
+  border-bottom: 0px solid #ebebeb;
+  border-right: none; 
+  /* 아래로 움직이는 거 */
+  transition: all .3s;
+}
+.gnb .depth2::after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  right: 0;
+  bottom: 5px;
+  width: 1px;
+  background: rgba(0,0,0,0.1);
+}
+.gnb .depth1 > li:last-child .depth2::after {
+  display: none;
 }
 .gnb .depth2 a {
   display: block;
@@ -72,7 +97,9 @@
   line-height: 40px;
 }
 .gnb .depth2 a:hover {
-  border-bottom: 2px solid #1a1a1a;
+  /* border-bottom: 2px solid #1a1a1a; */
+  background-color: #1a1a1a;
+  color: #fff;
 }
 
 /* slide */
